# subject_system

./: CMakeLists.txt  README.md  main.c
gtk_app/loginWindow/: loginWindow.c  loginWindow.h
gtk_app/mainWindow/: mainWindow.c  mainWindow.h
gtk_app/registerWindow/: registerWindow.c  registerWindow.h
gtk_app/root/: addCourseWindow.c  addCourseWindow.h  addWindow.c  addWindow.h  rootCourseWindow.c  rootCourseWindow.h  rootStudentWindow.c  rootStudentWindow.h  rootTeacherWindow.c  rootTeacherWindow.h  rootWindow.c  rootWindow.h
gtk_app/student/: addScWindow.c  addScWindow.h  studentWindow.c  studentWindow.h
gtk_app/teacher/: teacherGradeWindow.c  teacherGradeWindow.h  teacherWindow.c  teacherWindow.h
gtk_app/util/: toutf8.c  toutf8.h
mysql_app/course/: course.c  course.h
mysql_app/mysql_app/: mysql_app.c  mysql_app.h
mysql_app/sc/: sc.c  sc.h
mysql_app/student/: student.c  student.h
mysql_app/teacher/: teacher.c  teacher.h
sql_script/: subject_system_course.sql  subject_system_sc.sql  subject_system_student.sql  subject_system_teacher.sql
